# epinterface

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  components-lib-ma.db  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.cursor/: Dockerfile.agent  environment.json
.cursor/plans/: decision_dag_module_backup.plan.md  sbem_no-op_field_review_39478d17.plan.md
.cursor/rules/: uv-dependencies.mdc
.github/actions/setup-poetry-env/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
benchmarking/: benchmark.py
cli/: index.html
docs/: cli.md  index.md  modules.md
docs/modules/: actions.md  builder.md  climate-studio.md  geometry.md  interface.md  weather.md
docs/modules/sbem/: components.md  composer.md  index.md
epinterface/: __init__.py  actions.py  builder.py  cli.py  ddy_injector_bayes.py  ddy_interface_bayes.py  geometry.py  interface.py  settings.py  weather.py
epinterface/analysis/: __init__.py  energy_and_peak.py  overheating.py
epinterface/climate_studio/: __init__.py  actions.py  builder.py  interface.py  test.py
epinterface/constants/: __init__.py  physical_constants.py
epinterface/data/: Minimal.idf  USA_MA_Boston-Logan.Intl.AP.725090_TMYx.2009-2023.ddy  USA_MA_Boston-Logan.Intl.AP.725090_TMYx.2009-2023.epw  __init__.py  res_schedules.parquet
epinterface/sbem/: __init__.py  annotations.py  builder.py  common.py  envelope.py  exceptions.py  flat_model.py  interface.py  model_graph_structure.md  parser.py  space_use.py  utils.py
epinterface/sbem/components/: __init__.py  composer.py  envelope.py  materials.py  operations.py  schedules.py  space_use.py  systems.py  zones.py
epinterface/sbem/decision_dag/: __init__.py  agent.py  dag.py  executor.py  fields.py  schema_utils.py  validation.py  visualize.py
epinterface/sbem/fields/: __init__.py  spec.py
epinterface/sbem/flat_constructions/: REFERENCE_NOTES.md  __init__.py  assemblies.py  audit.py  layers.py  materials.py  roofs.py  slabs.py  walls.py
epinterface/sbem/noop_field_review/: NOOP_FIELD_REPORT.md  README.md  __init__.py  field_inventory.py  verify_field_usage.py
epinterface/sbem/prisma/: client.py  demo.py  partial_types.py  schema.prisma  seed_fns.py
epinterface/sbem/prisma/migrations/20250309133033_create_initial_schema/: migration.sql
epinterface/sbem/prisma/migrations/20250310162045_switch_to_using_one_week_per_month/: migration.sql
epinterface/sbem/prisma/migrations/20250317202733_change_names_ventilation/: migration.sql
epinterface/sbem/prisma/migrations/20250325185158_add_mutually_exclusive_ventilation_techtypes/: migration.sql
epinterface/sbem/prisma/migrations/20250326141941_reduce_naming_complexity_ventilation/: migration.sql
epinterface/sbem/prisma/migrations/20250331141910_add_support_for_attic_and_basement_constructions/: migration.sql
epinterface/sbem/prisma/migrations/20250919152559_decouple_basement_infiltration/: migration.sql
modules/: index.html
modules/actions/: index.html
modules/builder/: index.html
modules/climate-studio/: index.html
modules/geometry/: index.html
modules/interface/: index.html
modules/sbem/: index.html
modules/sbem/components/: index.html
modules/sbem/composer/: index.html
modules/weather/: index.html
notebooks/: everett_lib.json  everett_lib_v2.ipynb  everett_retrofit_actions.ipynb  everett_retrofits.yaml  idf-demo.ipynb  idf-demo.py  view-geo.ipynb
scripts/: gridsim.py
search/: search_index.json
tests/: conftest.py  test_actions.py  test_composer.py  test_construct_zone_def.py  test_db.py  test_geometry.py  test_neighbor_shading_geometry.py  test_weather.py
tests/data/: 0311_Template_MAWebApp.xlsx  0318_Template_MAWebApp.xlsx  20251001_Template_MAWebApp.xlsx  Template_MAWebApp.xlsx  component-lib.db  component-map-ma-simple.yml  component-map-ma.yml  components-ma-simple.db  components-ma-with-abs.db  components-ma.db  ma-component-lib.db  semantic-fields-ma-simple.yml  semantic-fields-ma-with-abs.yml  semantic-fields-ma.yml  template_tester.xlsx  template_tester_v2.xlsx  template_tester_v3.xlsx  tester_lib.xlsx
tests/data/old/: 0318_Template_MAWebApp.xlsx  Template_MAWebApp.xlsx  components-ma-old.db  components-ma.db  components-ma.db Kopie 3
tests/test_analysis/: test_overheating.py
tests/test_components/: test_builder.py  test_component_lib.py  test_envelope_comps.py  test_operations.py  test_space_use_comps.py
tests/test_decision_dag/: __init__.py  _last_dag.json  _last_user_field_set.yaml  _last_user_message.txt  test_dag.py  test_executor.py  test_fields.py  test_llm_integration.py  test_validation.py  tester.ipynb  visualized_dag.md  working_dag.json  working_dag.md  working_user_field_set.yaml
tests/test_flat_constructions/: test_layers_utils.py  test_physical_sanity_audit.py  test_roofs_slabs.py  test_walls.py
