[project]
name = "epinterface"
version = "1.0.0"
description = "This is a repository for dynamically generating energy models within Python, relying on Archetypal and Eppy for most of its functionality."
readme = "README.md"
authors = [
    { name = "Sam Wolk", email = "mail@samwolk.info" }
]
requires-python =">=3.10,<3.13"
dependencies = [
    "archetypal",
    "click==8.1.7",
    "geopandas~=1.0.1",
    "httpx~=0.27.2",
    "openpyxl~=3.1.5",
    "pandas~=2.2.3",
    "prisma~=0.15.0",
    "pydantic~=2.9.2",
]

[project.scripts]
epinterface = "epinterface.cli:cli"
epi = "epinterface.cli:cli"

[dependency-groups]
dev = [
    "jupyter~=1.1.1",
    "pandas-stubs~=2.2.3.250308",
    "pre-commit~=4.2.0",
    "pyarrow~=20.0.0",
    "pyright~=1.1.400",
    "pytest~=8.3.5",
    "pytest-asyncio~=0.26.0",
    "pytest-cov~=6.1.1",
    "tox~=4.25.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-click>=0.9.0",
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.29.1",
]

[tool.uv.sources]
archetypal = { git = "https://github.com/samuelduchesne/archetypal", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["epinterface"]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
ignore = ["epinterface/sbem/prisma/demo.py", "epinterface/sbem/parser.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    # Docs
    "D"
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["epinterface"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
